[project]
authors = [{name = "Goodman", email = "Cooper.Goodman@charlottenc.gov"}]
dependencies = []
name = "monte-carlo-example"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
monte_carlo_example = { path = ".", editable = true }

[tool.pixi.tasks]
